--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
